@@ -377,14 +377,6 @@ $(document).ready(function() {
                       $( this ).dialog( "close" );
                   }
               },
-              open: function() {
-                  $(this).keypress(function(e) {
-                    if (e.keyCode == $.ui.keyCode.ENTER) {
-                      e.preventDefault();
-                      $(this).parent().find("button:eq(0)").trigger("click");
-                    }
-                  });
-              },
               close: function() {
                 $( this ).dialog( "close" );
               }
@@ -426,26 +418,32 @@ $(document).ready(function() {
                       $( this ).dialog( "close" );
                   }
               },
-              open: function() {
-                  $(this).keypress(function(e) {
-                    if (e.keyCode == $.ui.keyCode.ENTER) {
-                      e.preventDefault();
-                      $(this).parent().find("button:eq(0)").trigger("click");
-                    }
-                  });
-              },
               close: function() {
                 $( this ).dialog( "close" );
               }
         });
 				
-				$("#dialog-addlightdevice #lighttable #how_1").click(function() {
-					EnableDisableSubDevices(false);
-				});
-				$("#dialog-addlightdevice #lighttable #how_2").click(function() {
-					EnableDisableSubDevices(true);
-				});
+	$("#dialog-addlightdevice #lighttable #how_1").click(function() {
+		EnableDisableSubDevices(false);
+	});
+	$("#dialog-addlightdevice #lighttable #how_2").click(function() {
+		EnableDisableSubDevices(true);
+	});
+	
+	ShowDevices();
+	
+	$( "#dialog-adddevice" ).keydown(function (event) {
+        if (event.keyCode == 13) {
+			$(this).siblings('.ui-dialog-buttonpane').find('button:eq(0)').trigger("click");
+            return false;
+        }
+    });
+	$( "#dialog-addlightdevice" ).keydown(function (event) {
+        if (event.keyCode == 13) {
+			$(this).siblings('.ui-dialog-buttonpane').find('button:eq(0)').trigger("click");
+            return false;
+        }
+    });
 				
-				ShowDevices();
 } );  
 </script>
