@@ -839,20 +839,19 @@ $(document).ready(function() {
                   $( this ).dialog( "close" );
               }
           },
-          open: function() {
-              $(this).keypress(function(e) {
-                if (e.keyCode == $.ui.keyCode.ENTER) {
-                  e.preventDefault();
-                  $(this).parent().find("button:eq(0)").trigger("click");
-                }
-              });
-          },
           close: function() {
             $( this ).dialog( "close" );
           }
     });
 
   ShowTemps();
-
+	
+	$( "#dialog-edittempdevice" ).keydown(function (event) {
+        if (event.keyCode == 13) {
+			$(this).siblings('.ui-dialog-buttonpane').find('button:eq(0)').trigger("click");
+            return false;
+        }
+    });
+	
 } );
 </script>
