@@ -552,14 +552,6 @@ $(document).ready(function() {
                   $( this ).dialog( "close" );
               }
           },
-          open: function() {
-              $(this).keypress(function(e) {
-                if (e.keyCode == $.ui.keyCode.ENTER) {
-                  e.preventDefault();
-                  $(this).parent().find("button:eq(0)").trigger("click");
-                }
-              });
-          },
           close: function() {
             $( this ).dialog( "close" );
           }
@@ -610,14 +602,6 @@ $(document).ready(function() {
               Cancel: function() {
                   $( this ).dialog( "close" );
               }
-          },
-          open: function() {
-              $(this).keypress(function(e) {
-                if (e.keyCode == $.ui.keyCode.ENTER) {
-                  e.preventDefault();
-                  $(this).parent().find("button:eq(0)").trigger("click");
-                }
-              });
           },
           close: function() {
             $( this ).dialog( "close" );
@@ -671,14 +655,6 @@ $(document).ready(function() {
                   $( this ).dialog( "close" );
               }
           },
-          open: function() {
-              $(this).keypress(function(e) {
-                if (e.keyCode == $.ui.keyCode.ENTER) {
-                  e.preventDefault();
-                  $(this).parent().find("button:eq(0)").trigger("click");
-                }
-              });
-          },
           close: function() {
             $( this ).dialog( "close" );
           }
@@ -726,20 +702,18 @@ $(document).ready(function() {
                   $( this ).dialog( "close" );
               }
           },
-          open: function() {
-              $(this).keypress(function(e) {
-                if (e.keyCode == $.ui.keyCode.ENTER) {
-                  e.preventDefault();
-                  $(this).parent().find("button:eq(0)").trigger("click");
-                }
-              });
-          },
           close: function() {
             $( this ).dialog( "close" );
           }
     }).i18n();
 
   ShowWeathers();
+	$( "dialog-editweatherdevice" ).keydown(function (event) {
+        if (event.keyCode == 13) {
+			$(this).siblings('.ui-dialog-buttonpane').find('button:eq(0)').trigger("click");
+            return false;
+        }
+    });
  
 } );  
 </script>
